--- a/styles.css
+++ b/styles.css
@@ -20,14 +20,25 @@ footer{
     background: url(imgs/suelo.jpg) repeat-x;
     z-index: 1;
     animation: slideSuelo 100s linear infinite;
-
 }
-main img{
-    position: fixed;
-    bottom: 35px;
-    left: 35px;
-    height: 150px;
+/*
+.boletClass{
+  display: flex;
+  position: fixed;
+  bottom: 10px;
+  height: 100px;
+  width: 100%;
+  justify-content: end;
+  animation: slideNubes 200s linear infinite;
 }
+#bolet{  
+  height: 100px;
+  width: 100px;
+  background-image: url(imgs/bolet.png);
+  background-size: contain; 
+  background-position: right;
+}
+*/
 
 @keyframes slideNubes {
     from {
