--- a/styles.css
+++ b/styles.css
@@ -48,15 +48,36 @@ footer{
   width: 120px;
   position: fixed;
   bottom: 42px;
-  right: 130px;
+  right: 10%;
   background-image: url(https://i.gifer.com/origin/ae/aefaf47caa61782884b98d4b0a6f9304_w200.gif);
   background-size: cover; 
   background-position: right;
   -moz-transform: scaleX(-1);
   -o-transform: scaleX(-1);
   -webkit-transform: scaleX(-1);
-  transform: scaleX(-1);
-  
+  transform: scaleX(-1);  
+}
+
+#star{
+  position: absolute;
+  left: 150px;
+  width: 100px;
+  height: 100px;
+  background-image: url(https://i.gifer.com/origin/23/238a465012f48c55b9c96c351be7eadd.gif);
+  z-index: 20;
+  background-size: cover;
+  background-repeat: no-repeat;
+  animation: starAnim 3s linear infinite;
+
+}
+
+@keyframes starAnim {
+  0% {
+    transform: translatex(0px) translatey(0px)
+  }
+  100% {
+      transform: translatex(600px) translatey(600px);
+  }
 }
 
 @keyframes tirarFuego {
